test/errors/unbound.pat
interface Dummy { Message(Int) }

def future(self: Dummy?): Unit {
    guard self : Message {
        receive Put(x) from self -> xfdjosijf + 1
    }
}
